so100_vla_demo: stream cameras in UI
- Chat-first UI commands (/stream on/off)\n- Better SO100 serial port auto-detect and safer connect\n- Multi-camera config via SO100_CAMERA_SOURCES\n- Add MCP server for local agent control

--- a/so100_vla_demo/llm_config.json
+++ b/so100_vla_demo/llm_config.json
@@ -1,6 +1,6 @@
 {
   "provider": "stub",
-  "model_name": "gemini-1.5-flash",
-  "api_key_env": "GEMINI_API_KEY"
+  "model_name": "claude-sonnet-4-20250514",
+  "api_key_env": "ANTHROPIC_API_KEY"
 }
 
